--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
 			<div class="drop-zone br"></div>
 		</div>
 	</section>
+    <section id="game-boards">
+		<!-- these are the draggable pieces -->
+		<div class="puzzle-pieces">
+			<img src="images/topLeft1.jpg" class="puzzle-image" alt="top left">
+			<img src="images/topRight1.jpg" class="puzzle-image" alt="top right">
+			<img src="images/bottomLeft1.jpg" class="puzzle-image" alt="bottom left">
+			<img src="images/bottomRight1.jpg" class="puzzle-image" alt="bottom right">
+		</div>	
+		<!-- these are the drop zones -->
+		<div class="puzzle-board">
+			<div class="drop-zone tl"></div>
+			<div class="drop-zone tr"></div>
+			<div class="drop-zone bl"></div>
+			<div class="drop-zone br"></div>
+		</div>
+	</section>
 	
 	<footer>
 		<p>Click Thumb to change pieces</p>
