--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<img src="images/bottomRight1.jpg" class="puzzle-image" alt="bottom right">
 		</div>	
 		<!-- these are the drop zones -->
-		<div class="puzzle-board">
+		<div class="puzzle-board1">
 			<div class="drop-zone tl"></div>
 			<div class="drop-zone tr"></div>
 			<div class="drop-zone bl"></div>
