--- a/index.html
+++ b/index.html
@@ -31,6 +31,60 @@
 		</div>
 	</section>
 	
+	<section id="game-boards">
+		<!-- these are the draggable pieces -->
+		<div class="puzzle-pieces">
+			<img src="images/topLeft1.jpg" class="puzzle-image" alt="top left">
+			<img src="images/topRight1.jpg" class="puzzle-image" alt="top right">
+			<img src="images/bottomLeft1.jpg" class="puzzle-image" alt="bottom left">
+			<img src="images/bottomRight1.jpg" class="puzzle-image" alt="bottom right">
+		</div>	
+		<!-- these are the drop zones -->
+		<div class="puzzle-board">
+			<div class="drop-zone tl"></div>
+			<div class="drop-zone tr"></div>
+			<div class="drop-zone bl"></div>
+			<div class="drop-zone br"></div>
+		</div>
+	</section>
+
+	
+	<section id="game-boards">
+		<!-- these are the draggable pieces -->
+		<div class="puzzle-pieces">
+			<img src="images/topLeft2.jpg" class="puzzle-image" alt="top left">
+			<img src="images/topRight2.jpg" class="puzzle-image" alt="top right">
+			<img src="images/bottomLeft2.jpg" class="puzzle-image" alt="bottom left">
+			<img src="images/bottomRight2.jpg" class="puzzle-image" alt="bottom right">
+		</div>	
+		<!-- these are the drop zones -->
+		<div class="puzzle-board">
+			<div class="drop-zone tl"></div>
+			<div class="drop-zone tr"></div>
+			<div class="drop-zone bl"></div>
+			<div class="drop-zone br"></div>
+		</div>
+	</section>
+
+	
+	<section id="game-boards">
+		<!-- these are the draggable pieces -->
+		<div class="puzzle-pieces">
+			<img src="images/topLeft3.jpg" class="puzzle-image" alt="top left">
+			<img src="images/topRight3.jpg" class="puzzle-image" alt="top right">
+			<img src="images/bottomLeft3.jpg" class="puzzle-image" alt="bottom left">
+			<img src="images/bottomRight3.jpg" class="puzzle-image" alt="bottom right">
+		</div>	
+		<!-- these are the drop zones -->
+		<div class="puzzle-board">
+			<div class="drop-zone tl"></div>
+			<div class="drop-zone tr"></div>
+			<div class="drop-zone bl"></div>
+			<div class="drop-zone br"></div>
+		</div>
+	</section>
+
+	
 	<footer>
 		<p>Click Thumb to change pieces</p>
 		<nav id="buttonHolder">
